Creado el contenedor del canvas para egragar el grafico

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Análisis básico de Huelgas en el Perú</h1>
+
+    <div>
+        <canvas id="container"></canvas>
+    </div>
+
+    <script src="src/main.js" type="module"></script>
 </body>
 </html>
