--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     </div>
 
     <script src="src/main.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
 </body>
 </html>
