--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Huelgas - Perú</title>
 </head>
 <body>
-    <div>
+    <div class="graphic">
         <canvas id="container"></canvas>
     </div>
 
