--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Huelgas - Perú</title>
 </head>
 <body>
-    <div class="graphic">
-        <canvas id="container"></canvas>
+    
+    <div class="container text-center">
+        <div class="row">
+            <div class="col">
+                <canvas id="container"></canvas>
+            </div>
+            <div class="col">
+            </div>
+        </div>
     </div>
+
+    <!--<div class="graphic">
+        <canvas id="container"></canvas>
+    </div>-->
 
     <script src="src/main.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
