Se mejoro la legibilidad de los nombres de las variables

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Huelgas - Perú</title>
 </head>
 <body>
-    <div class="graphic">
-        <canvas id="container"></canvas>
+    <div>
+        <canvas id="contenedor"></canvas>
     </div>
 
     <script src="src/main.js" type="module"></script>
