Sistema de grillas de bootstrap añadida

--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     <title>Huelgas - Perú</title>
 </head>
 <body>
-    <div>
-        <canvas id="contenedor"></canvas>
+
+    <div class="text-content">
+        <div class="row">
+            <div class="col">
+                <canvas id="contenedor"></canvas>
+            </div>
+            <div class="col">
+                <p>hola</p>
+            </div>
+        </div>
     </div>
 
     <script src="src/main.js" type="module"></script>
