--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="text-content">
         <div class="row">
             <div class="col">
-                <canvas id="contenedor"></canvas>
+                <canvas id="alan1"></canvas>
             </div>
             <div class="col">
-                <p>hola</p>
+                <canvas id="alan2"></canvas>
             </div>
         </div>
     </div>
