--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
     <div class="text-content">
         <div class="row">
             <div class="col">
+                <h3>Primer gobierno de Alan García</h3>
                 <canvas id="alan1"></canvas>
             </div>
             <div class="col">
+                <h3>Segundo Gobierno de Alan García</h3>
                 <canvas id="alan2"></canvas>
             </div>
         </div>
     </div>
 
-    <script src="src/main.js" type="module"></script>
+    <script src="src/app.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
