Aplicacion 1.0 con renderizado de charts correcta

--- a/index.html
+++ b/index.html
@@ -10,15 +10,26 @@
 </head>
 <body>
 
-    <div class="text-content">
+    <div class="container text-content">
         <div class="row">
             <div class="col">
-                <h3>Primer gobierno de Alan García</h3>
-                <canvas id="alan1"></canvas>
+                <h4>Datos Generales</h4>
+                <canvas id="general"></canvas>
             </div>
             <div class="col">
-                <h3>Segundo Gobierno de Alan García</h3>
-                <canvas id="alan2"></canvas>
+                <h4>Primer gobierno de Alan García</h4>
+                <canvas id="alan1"></canvas>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <h4>Gobierno de Alberto Fujimori</h4>
+                <canvas id="fujimori"></canvas>
+            </div>
+            <div class="col">
+                <h4>Gobierno de Valentin Paniagua</h4>
+                <canvas id="paniagua"></canvas>
             </div>
         </div>
     </div>
