Sigue persistiendo el BUG: chart requiere un contexto y no se como solucionarlo. Procesando...

--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
                 <canvas id="vizcarra"></canvas>
             </div>
         </div>
+        <div class="row">
+            <div class="col">
+                <canvas id="sagasti"></canvas>
+            </div>
+            <div class="col">
+                <canvas id=""></canvas>
+            </div>
+        </div>
     </div>
 
     <script src="src/app.js" type="module"></script>
