Aplicacion 5.0 graficos con titulo propio cantidad de huelgas e inflacion y titulo general

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
 
     <div class="container text-content">
+        <div class="row text-center">
+            <h1>#Huelgas por %inflación 1987 - 2021</h1>
+        </div>
         <div class="row">
             <!--<div class="col">
                 <h4>Datos Generales</h4>
