--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-    <div class="container text-content">
-        <div class="row text-center">
+    <div class="container text-content" id="containerG">
+        <!--<div class="row text-center">
             <h1>#Huelgas por %inflación 1987 - 2021</h1>
         </div>
         <div class="row">
@@ -46,7 +46,7 @@
         <div class="row">
             <canvas id="sagasti"></canvas>
         </div>
-    </div>
+    </div>-->
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
