Añadido el titulo de la aplicación

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
 
     <div class="container text-content" id="containerG">
+        <div class="row text-center">
+            <h1>Comparacion de datos sobre huelgas e inflacion en el Perú (1987 - 2021)</h1>
+        </div>
     </div>
 
     <!--<div class="row text-center">
