--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
 
-    <div class="container text-content" id="containerG">
-        <div class="row text-center">
-            <h1>Comparacion de datos sobre huelgas e inflacion en el Perú (1987 - 2021)</h1>
+    <div id="containerG">
+        <div>
+            <h1>
+                Comparacion de datos sobre huelgas e inflacion en el Perú
+                <small class="text-body-secondary">(1987 - 2021)</small>
+            </h1>
         </div>
     </div>
 
