Aprendiendo CSS para estilizar la pagina. En proceso...

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
 
-    <div id="containerG">
-        <div>
-            <h1>
-                Comparacion de datos sobre huelgas e inflacion en el Perú
-                <small class="text-body-secondary">(1987 - 2021)</small>
+    <div class="container" id="containerG">
+        <div class="div-title">
+            <h1 class="title">
+                Huelga e inflacion en el Perú
             </h1>
+            <h2 class="sub-title">
+                (1987 - 2021)
+            </h2>
         </div>
     </div>
 
