--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
     <title>Huelgas - Perú</title>
 </head>
 <body>
@@ -21,6 +20,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
-    <script src="src/app.js" type="module"></script>
+    <script src="/src/app.js" type="module"></script>
 </body>
 </html>
