--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="base.css">
     <title>Huelgas - Perú</title>
 </head>
 <body>
 
-    <div class="container" id="containerG">
-        <div class="div-title">
-            <h1 class="title">
+    <div id="containerG">
+        <div class="">
+            <h1 class="text-center bg-red-500">
                 Huelga e inflacion en el Perú
             </h1>
-            <h2 class="sub-title">
+            <h2 class="">
                 (1987 - 2021)
             </h2>
         </div>
