--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <main class="bg-emerald-100">
-        <header class="p-16">
+        <header class="p-12">
+            <div class="pb-6">
+                <img src="/img/mayor.png" alt="Logo president" class="h-20 w-20 mx-auto">
+            </div>
             <h1 class="text-center text-4xl p-5 font-bold bg-teal-600 text-white rounded-2xl font-sans">
                 Huelga e inflacion en el Perú
             </h1>
-            <div class="p-3">
-                <img src="/img/mayor.png" alt="Logo president" class="h-32 w-32 mx-auto">
-            </div>
-            <div class="">
+            <div class="mt-5">
                 <p class="font-bold text-2xl text-center">
                     (1987 - 2021)
                 </p>
