--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
     <title>Huelgas - Perú</title>
 </head>
 <body>
-    <main class="bg-emerald-100">
+    <main class="bg-emerald-100 font-poppins">
         <header class="p-12">
             <div class="pb-6">
-                <img src="/img/mayor.png" alt="Logo president" class="h-20 w-20 mx-auto">
+                <img src="/img/manifestacion.png" alt="Logo president" class="h-24 w-24 mx-auto">
             </div>
             <h1 class="text-center text-4xl p-5 font-bold bg-teal-600 text-white rounded-2xl font-sans">
                 Huelga e inflacion en el Perú
             </h1>
             <div class="mt-5">
-                <p class="font-bold text-2xl text-center">
-                    (1987 - 2021)
-                </p>
+                <p class="font-bold text-2xl text-center text-teal-900">(1987 - 2021)</p>
             </div>
         </header>
-        <div id="containerG">
+        <div id="containerG" class="">
             <!--Nodos creados con JavsScript-->
         </div>
     </main>
