Cambios en el header y en la agrupacion de los graficos

--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/base.css">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <title>Huelgas - Perú</title>
 </head>
 <body>
-    <main class="">
-        <header class="p-12 pl-44 pr-44">
+    <main class="font-sans">
+        <header class="p-12 pl-44 pr-44 bg-emerald-200">
             <div class="pb-6">
                 <img src="/img/manifestacion.png" alt="Logo president" class="h-24 w-24 mx-auto">
             </div>
-            <h1 class="text-center text-4xl p-5 font-bold rounded-2xl font-sans">
-                Huelga e inflacion en el Perú
-            </h1>
+            <h1 class="text-center text-5xl p-5 font-bold rounded-2xl">Huelga e inflacion en el Perú</h1>
+            
             <div class="mt-5">
-                <p class="font-bold text-2xl text-center">(1987 - 2021)</p>
+                <p class="text-2xl text-center italic">(1987 - 2021)</p>
             </div>
         </header>
-        <div id="containerG" class="">
+        <div id="containerG" class="grid grid-cols-2">
+
         </div>
     </main>
 
