--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <div class="pb-6">
                 <img src="/img/manifestacion.png" alt="Logo president" class="h-24 w-24 mx-auto">
             </div>
-            <h1 class="text-center text-5xl p-5 font-bold rounded-2xl">Huelga e inflacion en el Perú</h1>
+            <h1 class="text-center text-1xl p-5 font-extrabold rounded-2xl lg:text-5xl">Huelga e inflacion en el Perú</h1>
             
             <div class="mt-5">
                 <p class="text-2xl text-center italic">(1987 - 2021)</p>
             </div>
         </header>
-        <div id="containerG" class="grid grid-cols-2">
+        <div id="containerG" class="grid grid-cols-1 md:grid-cols-2">
 
         </div>
     </main>
