Refactorizamos y ordenamos el orden de las carpetas y los nombres de los archivos

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/base.css">
+    <link rel="stylesheet" href="./styles/output.css">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <title>Huelgas - Perú</title>
 </head>
@@ -12,7 +12,7 @@
     <main class="font-sans">
         <header class="p-12 pl-44 pr-44 bg-emerald-200">
             <div class="pb-6">
-                <img src="/img/manifestacion.png" alt="Logo president" class="h-24 w-24 mx-auto">
+                <img src="../img/manifestacion.png" alt="Logo president" class="h-24 w-24 mx-auto">
             </div>
             <h1 class="text-center text-1xl p-5 font-extrabold rounded-2xl lg:text-5xl">Huelga e inflacion en el Perú</h1>
             
@@ -26,6 +26,6 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
-    <script src="/src/app.js" type="module"></script>
+    <script src="../src/app.js" type="module"></script>
 </body>
 </html>
