--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
                 <p class="text-2xl text-center italic">(1987 - 2021)</p>
             </div>
         </header>
-        <div id="containerG" class="grid grid-cols-1 md:grid-cols-2">
+        <div id="chart" class="grid grid-cols-1 md:grid-cols-2">
 
         </div>
     </main>
