--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 
         <div id="chart" class="flex flex-col">
             <div class="flex flex-col pt-10">
-                <select name="" id="" class="p-3 font-normal mx-auto block w-auto h-auto rounded-xl">
+                <select name="" id="seleChart" class="p-3 font-normal mx-auto block w-auto h-auto rounded-xl">
                     <option selected>Seleccione el tipo de huelga</option>
                     <option value="pliego">Por pliego de reclamos</option>
                     <option value="otros">Por otras causas</option>
