--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/output.css">
+    <link rel="stylesheet" href="./public/styles/base.css">
     <title>Huelgas - Perú</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
                     <p class="text-text text-center p-2 lg:text-xl text-base font-normal">Comparación de la cantidad de huelgas por el porcentaje de inflación desde 1987 hasta 2021</p>
                 </div>
                 <div class="p-1 basis-1/4 invisible md:visible">
-                    <img src="../img/puño.svg" alt="logo-puño" class="lg:h-24 lg:w-24 h-20 w-20 mx-auto">
+                    <img src="./public/img/puño.svg" alt="logo-puño" class="lg:h-24 lg:w-24 h-20 w-20 mx-auto">
                 </div>
             </div>
         </header>
@@ -33,6 +33,6 @@
     </main>
     
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
-    <script src="../src/app.js" type="module"></script>
+    <script src="./src/app.js" type="module"></script>
 </body>
 </html>
