--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <p class="text-text text-center p-2 lg:text-xl text-base font-normal">Comparación de la cantidad de huelgas por el porcentaje de inflación desde 1987 hasta 2021</p>
                 </div>
                 <div class="p-1 basis-1/4 invisible md:visible">
-                    <img src="./public/img/puño.svg" alt="logo-puño" class="lg:h-24 lg:w-24 h-20 w-20 mx-auto">
+                    <img src="./public/img/mapa.svg" alt="logo-puño" class="lg:h-24 lg:w-24 h-20 w-20 mx-auto">
                 </div>
             </div>
         </header>
