--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="flex lg:flex-row flex-col sm:p-6 p-2">
                 <div class="basis-3/4 flex flex-col">
                     <h1 class="text-text text-center p-1 md:font-extrabold font-bold lg:text-6xl md:text-5xl sm:text-4xl text-3xl">Huelga e inflacion en el Perú.</h1>
-                    <p class="text-text text-center p-2 lg:text-xl text-base font-normal">Visualización de la cantidad de huelgas por el porcentaje de inflación en el Perú desde 1987 hasta 2021</p>
+                    <p class="text-textSub text-center p-2 lg:text-xl text-base font-normal">Visualización de la cantidad de huelgas por el porcentaje de inflación en el Perú desde 1987 hasta 2021</p>
                 </div>
                 <div class="p-1 basis-1/4 invisible md:visible">
                     <img src="./public/img/mapa.svg" alt="logo-puño" class="lg:h-24 lg:w-28 h-20 w-20 mx-auto">
