--- a/index.html
+++ b/index.html
@@ -14,25 +14,34 @@
 
     <main class="">
 
-        <header class="bg-head md:h-auto h-48 p-5">
+        <header class="bg-head h-auto p-7">
+            
             <div class="flex flex-col sm:p-6 p-2">
                 <div class="flex flex-col font-bebas">
                     <h1 class="text-text text-center p-2 font-bold lg:text-7xl md:text-5xl sm:text-4xl text-4xl">
                         Huelga e inflacion en el Perú
                     </h1>
-                    <p class="text-textSub text-center m-4 lg:text-2xl md:text-xl sm:text-base text-sm font-normal">
+                    <p class="text-textSub text-center m-2 lg:text-2xl md:text-xl sm:text-base text-sm font-normal">
                         Visualización de la cantidad de huelgas por el porcentaje de inflación en el Perú desde 1987 hasta 2021.
                     </p>
+                    <div class="flex flex-row mx-auto">
+                        <a href="https://github.com/BJChavez/huelgasjs" class="">
+                            <img src="./public/img/github.svg" alt="github logo" class="md:h-8 md:w-8 h-4 w-4 mr-4">
+                        </a>
+                        <a href="https://www.linkedin.com/in/bjchavez/">
+                            <img src="./public/img/linkedin.svg" alt="linkedin logo" class="md:h-8 md:w-8 h-4 w-4 ml-4">
+                        </a>
+                    </div>
                 </div>
             </div>
         </header>
 
         <div class="font-arial">
             <div class="md:pt-10 pt-2 visible font-bold text-center lg:text-sm text-xs text-text">
-                <button id="bar" class="p-3 bg-buttom hover:bg-textSub hover:text-head rounded-lg mr-4 shadow-lg">
+                <button id="bar" class="p-3 bg-buttom hover:bg-textSub rounded-lg mr-4 shadow-lg">
                     Gráfico de barras
                 </button>
-                <button id="line" class="p-3 bg-buttom hover:bg-textSub hover:text-head rounded-lg ml-4 shadow-lg">
+                <button id="line" class="p-3 bg-buttom hover:bg-textSub rounded-lg ml-4 shadow-lg">
                     Gráfico de lineas
                 </button>
             </div>
