--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <main class="">
 
-        <header class="bg-head h-auto p-7">
+        <header class="bg-head h-auto p-5">
             
             <div class="flex flex-col sm:p-6 p-2">
                 <div class="flex flex-col font-bebas">
@@ -24,12 +24,12 @@
                     <p class="text-textSub text-center m-2 lg:text-2xl md:text-xl sm:text-base text-sm font-normal">
                         Visualización de la cantidad de huelgas por el porcentaje de inflación en el Perú desde 1987 hasta 2021.
                     </p>
-                    <div class="flex flex-row mx-auto">
-                        <a href="https://github.com/BJChavez/huelgasjs" class="">
-                            <img src="./public/img/github.svg" alt="github logo" class="md:h-8 md:w-8 h-4 w-4 mr-4">
+                    <div class="flex flex-row place-content-center p-3">
+                        <a href="https://github.com/BJChavez/huelgasjs" target="blank" class="">
+                            <img src="./public/img/github.svg" alt="github logo" class="md:h-8 md:w-8 h-6 w-6 mr-4">
                         </a>
-                        <a href="https://www.linkedin.com/in/bjchavez/">
-                            <img src="./public/img/linkedin.svg" alt="linkedin logo" class="md:h-8 md:w-8 h-4 w-4 ml-4">
+                        <a href="https://www.linkedin.com/in/bjchavez/" target="blank">
+                            <img src="./public/img/linkedin.svg" alt="linkedin logo" class="md:h-8 md:w-8 h-6 w-6 ml-4">
                         </a>
                     </div>
                 </div>
@@ -38,10 +38,10 @@
 
         <div class="font-arial">
             <div class="md:pt-10 pt-2 visible font-bold text-center lg:text-sm text-xs text-text">
-                <button id="bar" class="p-3 bg-buttom hover:bg-textSub rounded-lg mr-4 shadow-lg">
+                <button id="bar" class="p-3 bg-buttom hover:bg-textSub rounded-lg mr-4 shadow-2xl">
                     Gráfico de barras
                 </button>
-                <button id="line" class="p-3 bg-buttom hover:bg-textSub rounded-lg ml-4 shadow-lg">
+                <button id="line" class="p-3 bg-buttom hover:bg-textSub rounded-lg ml-4 shadow-2xl">
                     Gráfico de lineas
                 </button>
             </div>
