--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./public/styles/base.css">
-    <title>Open Data Perú</title>
+    <title>Datos abiertos Perú</title>
 </head>
 <body>
 
