Se modificaron los iconos del github y linkedin

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     </p>
                     <div class="flex flex-row place-content-center p-3">
                         <a href="https://github.com/BJChavez/huelgasjs" target="blank" class="">
-                            <img src="./public/img/github.svg" alt="github logo" class="md:h-8 md:w-8 h-6 w-6 mr-4">
+                            <img src="./public/img/git.svg" alt="github logo" class="md:h-8 md:w-8 h-6 w-6 mr-4">
                         </a>
                         <a href="https://www.linkedin.com/in/bjchavez/" target="blank">
-                            <img src="./public/img/linkedin.svg" alt="linkedin logo" class="md:h-8 md:w-8 h-6 w-6 ml-4">
+                            <img src="./public/img/in.svg" alt="linkedin logo" class="md:h-8 md:w-8 h-6 w-6 ml-4">
                         </a>
                     </div>
                 </div>
