Probando varias paletas de colores

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
             <div class="flex flex-col sm:p-6 p-2">
                 <div class="flex flex-col font-bebas">
                     <h1 class="text-text text-center p-2 font-bold lg:text-7xl md:text-5xl sm:text-4xl text-4xl">
-                        Huelga e inflacion en el Perú
+                        Huelga e inflación en el Perú
                     </h1>
-                    <p class="text-textSub text-center m-2 lg:text-2xl md:text-xl sm:text-base text-sm font-normal">
+                    <p class="text-buttom text-center m-2 lg:text-2xl md:text-xl sm:text-base text-sm font-normal">
                         Visualización de la cantidad de huelgas por el porcentaje de inflación en el Perú desde 1987 hasta 2021.
                     </p>
                     <div class="flex flex-row place-content-center p-3">
-                        <a href="https://github.com/BJChavez/huelgasjs" target="blank" class="">
-                            <img src="./public/img/git.svg" alt="github logo" class="md:h-8 md:w-8 h-6 w-6 mr-4">
+                        <a href="https://github.com/BJChavez/huelgasjs" target="blank" class="mr-4">
+                            <img src="./public/img/new-git.svg" alt="github logo" class="md:h-8 md:w-8 h-6 w-6">
                         </a>
-                        <a href="https://www.linkedin.com/in/bjchavez/" target="blank">
-                            <img src="./public/img/in.svg" alt="linkedin logo" class="md:h-8 md:w-8 h-6 w-6 ml-4">
+                        <a href="https://www.linkedin.com/in/bjchavez/" target="blank" class="ml-4">
+                            <img src="./public/img/new-in.svg" alt="linkedin logo" class="md:h-8 md:w-8 h-6 w-6">
                         </a>
                     </div>
                 </div>
@@ -38,10 +38,10 @@
 
         <div class="font-arial">
             <div class="md:pt-10 pt-2 visible font-bold text-center lg:text-sm text-xs text-text">
-                <button id="bar" class="p-3 bg-buttom hover:bg-textSub rounded-lg mr-4 shadow-2xl">
+                <button id="bar" class="p-3 bg-textSub hover:bg-buttom rounded-lg mr-4 shadow-2xl border-2 border-head">
                     Gráfico de barras
                 </button>
-                <button id="line" class="p-3 bg-buttom hover:bg-textSub rounded-lg ml-4 shadow-2xl">
+                <button id="line" class="p-3 bg-textSub hover:bg-buttom rounded-lg ml-4 shadow-2xl border-2 border-head">
                     Gráfico de lineas
                 </button>
             </div>
