--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <div class="md:pt-10 pt-2 visible font-bold text-center lg:text-sm text-xs text-text">
                 <select name="" id="graphics" class="text-head">
                     <option selected>Tipo de gráfico</option>
-                    <option value="barras">Barras</option>
-                    <option value="lineas">Lineas</option>
+                    <option value="bar">Barras</option>
+                    <option value="line">Lineas</option>
                 </select>
                 <button id="download" class="p-3 bg-textSub hover:bg-buttom rounded-lg ml-4 shadow-2xl border-2 border-head">
                     Dataset
