--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <option class="md:text-xl text-sm" value="bar">Barras</option>
                 <option class="md:text-xl text-sm" value="line">Lineas</option>
             </select>
-            <button id="download" class="md:text-xl text-sm h-auto md:p-2 p-1.5 text-textButtom bg-bgButtom hover:bg-hoverButtom rounded-md ml-4">
+            <button id="download" class="md:text-xl text-sm h-auto md:p-2 p-1.5 text-textButtom bg-bgButtom hover:bg-hoverButtom hover:text-hoverBtext rounded-md ml-4 border-2">
                 Descargar dataset
             </button>
         </div>
