Se cambiaron los path de las llamadas a los archivos estaticos y a los estilos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./public/styles/base.css">
+    <link rel="stylesheet" href="./styles/input.css">
     <title>Datos abiertos Perú</title>
 </head>
 <body>
@@ -26,13 +26,13 @@
                     </p>
                     <div class="flex flex-row place-content-center p-3">
                         <a href="https://github.com/BJChavez/huelgasjs" target="blank" class="mr-4">
-                            <img src="./public/img/new-github.svg" alt="github logo" class="md:h-8 md:w-8 h-6 w-6">
+                            <img src="./img/new-github.svg" alt="github logo" class="md:h-8 md:w-8 h-6 w-6">
                         </a>
                         <a href="https://www.linkedin.com/in/bjchavez/" target="blank" class="ml-4">
-                            <img src="./public/img/in.svg" alt="linkedin logo" class="md:h-8 md:w-8 h-6 w-6">
+                            <img src="./img/in.svg" alt="linkedin logo" class="md:h-8 md:w-8 h-6 w-6">
                         </a>
                         <a href="https://www.datosabiertos.gob.pe/" target="blank" class="ml-8">
-                            <img src="./public/img/peru.svg" alt="peru logo" class="md:h-8 md:w-8 h-6 w-6">
+                            <img src="./img/peru.svg" alt="peru logo" class="md:h-8 md:w-8 h-6 w-6">
                         </a>
                     </div>
                 </div>
