Se cambio el nombre del boton para obtener el CSV

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <option class="md:text-xl text-sm" value="line">Lineas</option>
             </select>
             <button id="download" class="md:text-xl text-sm h-auto md:p-2 p-1.5 text-textButtom bg-bgButtom hover:bg-hoverButtom hover:text-hoverBtext rounded-md ml-4 border-2">
-                Obtener dataset
+                Obtener CSV
             </button>
         </div>
 
