--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/input.css">
     <title>Datos abiertos Perú</title>
 </head>
@@ -17,7 +18,7 @@
         <header class="bg-head h-auto p-5">
             
             <div class="flex flex-col sm:p-6 p-2">
-                <div class="flex flex-col font-bebas">
+                <div class="flex flex-col font-sans">
                     <h1 class="text-text text-center p-2 font-extrabold lg:text-7xl md:text-5xl sm:text-4xl text-4xl">
                         Huelga e inflación en el Perú
                     </h1>
