Agregando la fuente Poppins

--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/input.css">
     <title>Datos abiertos Perú</title>
 </head>
@@ -18,11 +14,11 @@
         <header class="bg-head h-auto p-5">
             
             <div class="flex flex-col sm:p-6 p-2">
-                <div class="flex flex-col font-sans">
-                    <h1 class="text-text text-center p-2 font-extrabold lg:text-7xl md:text-5xl sm:text-4xl text-4xl">
+                <div class="flex flex-col font-poppins">
+                    <h1 class="text-text text-center p-2 font-extrabold lg:text-6xl md:text-5xl sm:text-4xl text-4xl">
                         Huelga e inflación en el Perú
                     </h1>
-                    <p class="text-textSub text-center m-2 lg:text-2xl md:text-xl sm:text-base text-sm font-normal">
+                    <p class="text-textSub text-center m-2 lg:text-2xl md:text-xl sm:text-base text-sm italic font-light">
                         Visualización de la cantidad de huelgas por el porcentaje de inflación en el Perú desde 1987 hasta 2021.
                     </p>
                     <div class="flex flex-row place-content-center p-3">
@@ -40,7 +36,7 @@
             </div>
         </header>
 
-        <div class="flex flex-row place-content-center font-bebas md:pt-10 pt-2 font-bold text-center lg:text-sm text-xs">
+        <div class="flex flex-row place-content-center md:pt-10 pt-2 text-center lg:text-sm text-xs font-lato">
             <select id="graphics" class="text-head h-auto md:p-2 p-1.5 rounded-md md:text-xl text-sm">
                 <option class="md:text-xl text-sm" selected>Tipo de gráfico</option>
                 <option class="md:text-xl text-sm" value="bar">Barras</option>
