--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
             <div class="flex flex-col sm:p-6 p-2">
                 <div class="flex flex-col font-poppins">
-                    <h1 class="text-text text-center p-2 font-extrabold lg:text-6xl md:text-5xl sm:text-4xl text-4xl">
+                    <h1 class="text-text text-center p-2 font-semibold lg:text-5xl md:text-5xl sm:text-4xl text-4xl">
                         Huelga e inflación en el Perú
                     </h1>
                     <p class="text-textSub text-center m-2 lg:text-2xl md:text-xl sm:text-base text-sm italic font-light">
