Probando funciones de los graficos en la etiqueta de los graficos

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -46,7 +46,7 @@
       </button>
     </div>
         
-    <section id="chart" class="flex flex-col"></section>
+    <div id="chart" class="flex flex-col"></div>
   </main>
   <script src="app.js" type="module"></script>
 </body>
